syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
package Dto;

message CharacterDto {
  int32 id = 1;
  int32 accountId = 2;
  int32 world = 3;
  string name = 4;
  int32 level = 5;
  int32 exp = 6;
  int32 gachaexp = 7;
  int32 str = 8;
  int32 dex = 9;
  int32 luk = 10;
  int32 int = 11;
  int32 hp = 12;
  int32 mp = 13;
  int32 maxhp = 14;
  int32 maxmp = 15;
  int32 meso = 16;
  int32 hpMpUsed = 17;
  int32 jobId = 18;
  int32 skincolor = 19;
  int32 gender = 20;
  int32 fame = 21;
  int32 fquest = 22;
  int32 hair = 23;
  int32 face = 24;
  int32 ap = 25;
  string sp = 26;
  int32 map = 27;
  int32 spawnpoint = 28;
  int32 party = 29;
  int32 buddyCapacity = 30;
  google.protobuf.Timestamp createDate = 31;
  int32 rank = 32;
  int32 rankMove = 33;
  int32 jobRank = 34;
  int32 jobRankMove = 35;
  int32 guildId = 36;
  int32 guildRank = 37;
  int32 messengerId = 38;
  int32 messengerPosition = 39;
  int32 mountLevel = 40;
  int32 mountExp = 41;
  int32 mounttiredness = 42;
  int32 omokwins = 43;
  int32 omoklosses = 44;
  int32 omokties = 45;
  int32 matchcardwins = 46;
  int32 matchcardlosses = 47;
  int32 matchcardties = 48;
  int32 merchantMesos = 49;
  bool hasMerchant = 50;
  int32 equipslots = 51;
  int32 useslots = 52;
  int32 setupslots = 53;
  int32 etcslots = 54;
  int32 familyId = 55;
  int32 monsterbookcover = 56;
  int32 allianceRank = 57;
  int32 vanquisherStage = 58;
  int32 ariantPoints = 59;
  int32 dojoPoints = 60;
  int32 lastDojoStage = 61;
  bool finishedDojoTutorial = 62;
  int32 vanquisherKills = 63;
  int32 summonValue = 64;
  int32 partnerId = 65;
  int32 marriageItemId = 66;
  int32 reborns = 67;
  int32 pqpoints = 68;
  google.protobuf.StringValue dataString = 69;
  google.protobuf.Timestamp lastLogoutTime = 70;
  google.protobuf.Timestamp lastExpGainTime = 71;
  bool partySearch = 72;
  int64 jailexpire = 73;
  string nameWithMedal = 74;
}
